--- a/toDojQuery.html
+++ b/toDojQuery.html
@@ -6,7 +6,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
+        <title>To Do List</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <script src="js/lib/jquery-3.4.1.min.js"></script>
@@ -16,7 +16,11 @@
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-        
+        <div class="red-ruler"></div>
+        <ol class="list">
+            <li>feed dog</li>
+            <li>clean dog</li>
+        </ol>
         <script src="js/toDo.js" async defer></script>
     </body>
 </html>
