--- a/toDojQuery.html
+++ b/toDojQuery.html
@@ -17,10 +17,13 @@
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
         <div class="red-ruler"></div>
-        <ol class="list">
-            <li>feed dog</li>
-            <li>clean dog</li>
-        </ol>
+        <div id="container">
+            <h1>To Do list</h1>
+            <ol class="list">
+                <li>feed dog</li>
+                <li>clean dog</li>
+            </ol>
+        </div>
         <script src="js/toDo.js" async defer></script>
     </body>
 </html>
