--- a/toDojQuery.html
+++ b/toDojQuery.html
@@ -19,9 +19,10 @@
         <div class="red-ruler"></div>
         <div id="container">
             <h1>To Do list</h1>
+            <input type="text">
             <ol class="list">
-                <li>feed dog</li>
-                <li>clean dog</li>
+                <li><span>X</span> feed dog</li>
+                <li><span>X</span> clean dog</li>
             </ol>
         </div>
         <script src="js/toDo.js" async defer></script>
