--- a/toDojQuery.html
+++ b/toDojQuery.html
@@ -11,6 +11,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <script src="js/lib/jquery-3.4.1.min.js"></script>
         <link rel="stylesheet" href="toDo.css">
+        <link href="https://fonts.googleapis.com/css?family=Caveat&display=swap" rel="stylesheet">
     </head>
     <body>
         <!--[if lt IE 7]>
@@ -19,7 +20,7 @@
         <div class="red-ruler"></div>
         <div id="container">
             <h1>To Do list</h1>
-            <input type="text">
+            <input type="text" placeholder="Add new To Do">
             <ol class="list">
                 <li><span>X</span> feed dog</li>
                 <li><span>X</span> clean dog</li>
