--- a/toDojQuery.html
+++ b/toDojQuery.html
@@ -12,6 +12,7 @@
         <script src="js/lib/jquery-3.4.1.min.js"></script>
         <link rel="stylesheet" href="toDo.css">
         <link href="https://fonts.googleapis.com/css?family=Caveat&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
     </head>
     <body>
         <!--[if lt IE 7]>
@@ -22,8 +23,8 @@
             <h1>To Do list</h1>
             <input type="text" placeholder="Add new To Do">
             <ol class="list">
-                <li><span>X</span> feed dog</li>
-                <li><span>X</span> clean dog</li>
+                <li><span><i class="fas fa-trash-alt"></i></span> feed dog</li>
+                <li><span><i class="fas fa-trash-alt"></i></span> clean dog</li>
             </ol>
         </div>
         <script src="js/toDo.js" async defer></script>
